welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:3: error: value unary_! is not a member of Int
while(!nbBiscuit != 4)
      ^